# RAG_CPP

./: .gitattributes  CMakeLists.txt  README.md  api.txt
data/: config.json  corpus.txt
py_server_test/: FastAPI_server.py  embed_server.py
src/: CMakeLists.txt  chunker.cpp  chunker.h  config.cpp  config.h  embedding_client.cpp  embedding_http.cpp  embedding_http.h  llm_client.cpp  llm_client.h  llm_http.cpp  llm_http.h  main.cpp  ollama_embeddings.cpp  ollama_embeddings.h  rag_engine.cpp  rag_engine.h  retriever.cpp  retriever.h  util.cpp  util.h  vector_store.cpp  vector_store.h
temp/source ifles/: chunker.cpp  comfig.cpp  embedding_client.h  embedding_http.cpp  embedding_http.h  main.cpp
temp/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  chunker.h  cmake_install.cmake  comfig.h  embedding_client.cpp  rag_app.vcxproj  rag_app.vcxproj.filters  test.cpp  util.cpp  util.h
temp/src/rag_app.dir/Debug/: rag_app.exe.recipe
temp/src/rag_app.dir/Debug/rag_app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.secondary.1.tlog
temp/src/rag_app.dir/Release/: rag_app.exe.recipe
temp/src/rag_app.dir/Release/rag_app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
tests/: CMakeLists.txt  main.cpp  test_embedding.cpp  test_retriever.cpp  test_vector_store.cpp
